Add usage comments

--- a/keepass2/Dockerfile
+++ b/keepass2/Dockerfile
@@ -1,7 +1,17 @@
+# USAGE:
+#	docker run  -it --rm \
+# 	-v /tmp/.X11-unix:/tmp/.X11-unix \
+#	-v $HOME/keepass:/home/keepass/keepass \
+#	-e DISPLAY=unix$DISPLAY \
+#	--name keepass2 benoitg/keepass2
+#
+# POSSIBLE ISSUES:
+#	# 'Gtk: cannot open display: :0'
+#	Try to set 'DISPLAY=your_host_ip:0' or run 'xhost +' on your host.
+#	(see: http://stackoverflow.com/questions/28392949/running-chromium-inside-docker-gtk-cannot-open-display-0)
 FROM debian:latest
 MAINTAINER Benoit GALATI <benoit.galati@gmail.com>
 
-# Tell debconf to run in non-interactive mode
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-get install -y \
