No htaccess override on Symfony conf + app_dev.php as default front

--- a/php-apache-symfony/symfony.conf
+++ b/php-apache-symfony/symfony.conf
@@ -4,7 +4,7 @@
 
     DocumentRoot /var/www/html/web
     <Directory /var/www/html/web>
-        AllowOverride All
+        AllowOverride None
         Require all granted
         Allow from All
 
@@ -12,6 +12,7 @@
             Options -MultiViews
             RewriteEngine On
             RewriteCond %{REQUEST_FILENAME} !-f
+            # RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}] 
             RewriteRule ^(.*)$ app_dev.php [QSA,L]
         </IfModule>
     </Directory>
