Fix workdir path for ruby container

--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -10,4 +10,6 @@ RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
+WORKDIR /usr/src/
+
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
