--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,6 +1,8 @@
 FROM ruby:2
 MAINTAINER Benoit Galati <benoit.galati@gmail.com>
 
+RUN apt-get update && apt-get install -y nodejs
+
 RUN gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
     && curl -o /usr/local/bin/gosu -SL "https://github.com/tianon/gosu/releases/download/1.9/gosu-$(dpkg --print-architecture)" \
     && curl -o /usr/local/bin/gosu.asc -SL "https://github.com/tianon/gosu/releases/download/1.9/gosu-$(dpkg --print-architecture).asc" \
