phpsa : use benoitg/composer instead of composer/composer

--- a/phpsa/Dockerfile
+++ b/phpsa/Dockerfile
@@ -1,14 +1,6 @@
-FROM composer/composer:php7
+FROM benoitg/composer
 
 MAINTAINER Benoit GALATI <benoit.galati@gmail.com>
-
-RUN useradd -ms /bin/sh composer \
-    && chown -R composer:composer /home/composer
-
-USER composer
-
-ENV HOME /home/composer
-ENV COMPOSER_HOME /home/composer/composer
 
 RUN composer global require ovr/phpsa
 
