Add redis-desktop-manager v0.8.8

--- a/keepass2/Dockerfile
+++ b/keepass2/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:latest
 MAINTAINER Benoit GALATI <benoit.galati@gmail.com>
 
-ENV DEBIAN_FRONTEND noninteractive
+ARG DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-get install -y \
   keepass2
