--- a/skype/Dockerfile
+++ b/skype/Dockerfile
@@ -1,7 +1,7 @@
 FROM debian:jessie
 MAINTAINER Benoit Galati <benoit.galati@gmail.com>
 
-ENV DEBIAN_FRONTEND noninteractive
+ARG DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update && apt-get install -y curl ca-certificates supervisor --no-install-recommends \
     && curl -SL https://go.skype.com/skypeforlinux-64-alpha.deb -o /usr/src/skype.deb \
