--- a/php-tools/Dockerfile
+++ b/php-tools/Dockerfile
@@ -28,11 +28,11 @@ RUN git clone https://github.com/nikic/php-ast.git /tmp/php-ast \
 
 RUN apk del .build-deps
 
-RUN composer global require etsy/phan
+RUN composer global require phan/phan friendsofphp/php-cs-fixer
 
 RUN docker-php-ext-install pcntl intl
 
-env PATH /composer/vendor/bin:$PATH
+env PATH /tmp/vendor/bin:$PATH
 
 ENTRYPOINT []
 CMD []
