--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,15 +1,19 @@
 FROM ruby:2
 MAINTAINER Benoit Galati <benoit.galati@gmail.com>
 
-ENV LANG="en_US.UTF-8" \
-    LC_ALL="en_US.UTF-8" \
-    LANGUAGE="en_US.UTF-8"
+RUN apt-get update \
+    && apt-get install -y ca-certificates \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-RUN apt-get update && apt-get install -y nodejs ca-certificates
+RUN groupadd --gid 1000 ruby \
+  && useradd --uid 1000 --gid ruby --shell /bin/bash --create-home ruby \
+  && mkdir /app \
+  && chown -R ruby:ruby /app
 
-ENV GOSU_VERSION 1.10
-RUN wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64" \
-    && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64.asc" \
+ENV GOSU_VERSION 1.11
+RUN wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64" \
+    && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64.asc" \
     && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
     && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
     && rm -rf /usr/local/bin/gosu.asc \
@@ -18,6 +22,6 @@ RUN wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/downloa
 
 COPY entrypoint.sh /usr/local/bin/entrypoint.sh
 
-WORKDIR /usr/src/
+WORKDIR /app
 
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
