--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,10 +1,19 @@
 FROM ruby:2
 MAINTAINER Benoit Galati <benoit.galati@gmail.com>
 
-RUN apt-get update \
-    && apt-get install -y ca-certificates \
+ENV LANG="en_US.UTF-8" \
+    LC_ALL="en_US.UTF-8" \
+    LANGUAGE="en_US.UTF-8" \
+    DEBIAN_FRONTEND=noninteractive
+
+RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment \
+    && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
+    && echo "LANG=en_US.UTF-8" > /etc/locale.conf \
+    && apt-get update \
+    && apt-get install -y ca-certificates locales \
     && apt-get clean \
-    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
+    && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
+    && locale-gen en_US.UTF-8
 
 ENV GOSU_VERSION 1.11
 RUN wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64" \
