🐛   Fix ruby 3 build

--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -10,19 +10,26 @@ RUN echo "LC_ALL=en_US.UTF-8" >> /etc/environment \
     && echo "en_US.UTF-8 UTF-8" >> /etc/locale.gen \
     && echo "LANG=en_US.UTF-8" > /etc/locale.conf \
     && apt-get update \
-    && apt-get install -y ca-certificates locales \
+    && apt-get install -y --no-install-recommends gnupg2 dirmngr ca-certificates locales \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/* \
     && locale-gen en_US.UTF-8
 
-ENV GOSU_VERSION 1.11
-RUN wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64" \
-    && wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/${GOSU_VERSION}/gosu-amd64.asc" \
-    && gpg --keyserver ha.pool.sks-keyservers.net --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4 \
-    && gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu \
-    && rm -rf /usr/local/bin/gosu.asc ~/.gnupg \
-    && chmod +x /usr/local/bin/gosu \
-    && gosu nobody true
+ENV GOSU_VERSION 1.14
+RUN set -eux; \
+	wget -O /usr/local/bin/gosu "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64"; \
+	wget -O /usr/local/bin/gosu.asc "https://github.com/tianon/gosu/releases/download/$GOSU_VERSION/gosu-amd64.asc"; \
+	chmod +x /usr/local/bin/gosu; \
+	\
+# verify the signature
+	export GNUPGHOME="$(mktemp -d)"; \
+	gpg --batch --keyserver hkps://keys.openpgp.org --recv-keys B42F6819007F00F88E364FD4036A9C25BF357DD4; \
+	gpg --batch --verify /usr/local/bin/gosu.asc /usr/local/bin/gosu; \
+	command -v gpgconf && gpgconf --kill all || :; \
+	rm -rf "$GNUPGHOME" /usr/local/bin/gosu.asc; \
+# verify that the binary works
+	gosu --version; \
+	gosu nobody true
 
 RUN groupadd --gid 1000 ruby \
   && useradd --uid 1000 --gid ruby --shell /bin/bash --create-home ruby \
